application/api-gateway-service/api-gateway-service-deployment/k8s/api-gateway-service-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service-name: api-gateway-service
  template:
    metadata:
      labels:
        service-name: api-gateway-service
    spec:
      containers:
        - name: api-gateway-service
          image: "localhost:5002/api-gateway-service:0.1.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            limits:
              cpu: 3000m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
