application/api-gateway-service/api-gateway-service-deployment/k8s/api-gateway-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  labels:
    name: api-gateway-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    service-name: api-gateway-service
